# libpocket

./: .gitignore  CMakeLists.txt  README.md
include/: pocket.hxx
src/: CMakeLists.txt  Franction.cpp  util.cpp
test/: CMakeLists.txt  Fraction_test.cpp  main.cpp  util_test.cpp
